crates/kply-cli/src/snapshots/kply__tests__init_config_yaml.snap
---
source: crates/kply-cli/src/main.rs
expression: yaml
---
version: 1
apps:
- name: checkout-api
  namespace: shop
  workload: checkout-api
  workload_kind: Deployment
  service: checkout-http
  route_strategy: preview
routing: {}
checks: []
policies: []
