crates/kply-cli/src/snapshots/kply__tests__init_report_empty_text.snap
---
source: crates/kply-cli/src/main.rs
expression: "init_report_text(&report, false)"
---
kply init --from-cluster

Cluster
  server              https://127.0.0.1:6443/
  default_namespace   default
  namespaces_scanned  2

Discovered Apps
  no apps discovered

Generated
  path  kply.yaml
  apps  0

Next
  kply --config kply.yaml app list
