crates/kply-cli/src/snapshots/kply__tests__init_report_multiple_apps_text.snap
---
source: crates/kply-cli/src/main.rs
expression: "init_report_text(&report, false)"
---
kply init --from-cluster

Cluster
  server              https://127.0.0.1:6443/
  default_namespace   default
  namespaces_scanned  2

Discovered Apps
  ✓ shop/checkout-api
      app             checkout-api
      service         checkout-http
      route_strategy  preview
      ports           80
  ✓ shop/catalog-api
      app             catalog-api
      service         catalog-http
      route_strategy  preview
      ports           80

Generated
  path  kply.yaml
  apps  2

Next
  kply --config kply.yaml app list
  kply --config kply.yaml app inspect checkout-api
